--- a/style/style1.css
+++ b/style/style1.css
@@ -1,28 +1,93 @@
-body { background: #84ff80;
+.topmost { 
+    display: grid;
+    background: linear-gradient(84deg,rgb(0, 51, 0),rgb(125, 224, 52), rgba(125, 224, 52, 0.3));
+    width: 90%;;
+    justify-content: space-evenly;
+    height: 500px;
+    padding-right: 130px;
+}
+.menu-container {
+    display: grid;
+    background: rgba(255, 255, 153, 0.6);
+    justify-content: space-evenly;
+    grid-template-columns: 600px 300px;
+    grid-gap: 70px 20px;
 }
 #heading {
-    color: rgba(255, 0, 102, 0.9);
+    color: rgb(128, 0, 64);
     text-align: center;
-    background: url("../img/doe2.jpg");
-    background-size: contain;
-    background-repeat: no repeat;
-    height: 150px;
-    padding: 20 45px 150px 10px; 
+    height: 100px;
+    padding: 0 45px 100px 10px; 
+    font-size: 60px;
+    font-style: italic;
+    font-family: sans-serif;
+    transform: translate(80px,-120px);
+    animation-name: fade;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+   /* display: inline-block;*/
 }
+@keyframes fade {
+    0% {
+      color: rgb(128, 0, 64);
+      top: 0px;
+      left:0px;
+    }
+    50% {
+      color: rgb(0, 255, 0);
+      top: 50px;
+      left: 25px;
+    }
+    100% {
+      tcolor: rgba(230, 230, 0, 0.7);
+      top: 0px;
+      left: -30px;
+    }
+  }
 #heading :hover {
-    color: rgba(204, 102, 0, 0.1)
+    color: rgba(73, 14, 209, 0.911);
+    font-size: larger;
+    -webkit-transition: text 300ms ease-in-out;
+    
 }
-img .imgagestyle { 
-    width: 50px;
-    height: 10px;
+img[src="img/doe.jpg"] { 
+    width: 80%;
+    height: 400px;
+    border: 2px solid rgb(179, 179, 0);
+    margin-left: 200px;
+    margin-top: 20px;
 }
 #bodily {
     background: linear-gradient(84deg,rgb(125, 224, 52), rgba(125, 224, 52, 0.3));
-    width: 800px;
+    width: 90%;
+    font-size: 1.25em;
 }
 /*ul > li {
     color: #3b8796;
 }*/
-.menu {
+.menu-2 {
     color: rgb(136, 28, 153);
+    font-size: 20px;
+    font-weight: 200;
+}
+.menu-item4 {
+    transform: translate(-80px,30px); 
+}
+.menu-2 {
+    transform: translate(50px,0);
+}
+.description {
+    font-weight: 400;
+    font-style: normal;
+    text-align: justify;
+}
+.article {
+    background: rgb(204, 0, 204);
+}
+#videoa {
+    width: 400px;
+    height: 220px;
+    float: right;
+    padding: 0 0 100px 0;
+    border-radius: 20%; 
 }
