--- a/style/style1.css
+++ b/style/style1.css
@@ -1,31 +1,46 @@
-.topmost { 
+
+#main {
+    background: linear-gradient(84deg,rgb(125, 224, 52), rgba(125, 224, 52, 0.3));
+    font-size: 1.25em;
+    display: grid;
+    grid-template-columns: 60% 40%;
+    grid-gap: 50px;
+    width: 100%;
+}
+
+  #welcome { 
     display: grid;
     background: linear-gradient(84deg,rgb(0, 51, 0),rgb(125, 224, 52), rgba(125, 224, 52, 0.3));
-    width: 90%;;
-    justify-content: space-evenly;
-    height: 500px;
+    width: 100%;
+    justify-content: contain;
+    height: 400px;
     padding-right: 130px;
 }
-.menu-container {
-    display: grid;
-    background: rgba(255, 255, 153, 0.6);
-    justify-content: space-evenly;
-    grid-template-columns: 600px 300px;
-    grid-gap: 70px 20px;
+.menu-item {
+    font-size: 1.5em;
+    transform: translate(800px,-250px);
+    justify-content: justify;
 }
-#heading {
+.menu-item1 {
+    font-size: 1.1em;
+    transform: translate(80px,-5px);
+    justify-content: justify;
+}
+#header {
     color: rgb(128, 0, 64);
     text-align: center;
     height: 100px;
     padding: 0 45px 100px 10px; 
-    font-size: 60px;
+    font-size: 30px;
     font-style: italic;
     font-family: sans-serif;
     transform: translate(80px,-120px);
     animation-name: fade;
     animation-duration: 4s;
     animation-iteration-count: infinite;
-   /* display: inline-block;*/
+    animation-timing-function: linear;
+    animation-direction: alternate;
+   
 }
 @keyframes fade {
     0% {
@@ -34,60 +49,69 @@
       left:0px;
     }
     50% {
-      color: rgb(0, 255, 0);
+      color: rgb(255, 153, 153);
       top: 50px;
       left: 25px;
+      transform: rotate(-45deg);
     }
     100% {
-      tcolor: rgba(230, 230, 0, 0.7);
+      color: rgb(172, 0, 230);
       top: 0px;
       left: -30px;
+      transform: rotate(45deg);
     }
   }
-#heading :hover {
+#header :hover {
     color: rgba(73, 14, 209, 0.911);
     font-size: larger;
-    -webkit-transition: text 300ms ease-in-out;
-    
-}
-img[src="img/doe.jpg"] { 
-    width: 80%;
-    height: 400px;
+   
+    }
+img {
+    height: 250px;
     border: 2px solid rgb(179, 179, 0);
-    margin-left: 200px;
-    margin-top: 20px;
+    margin-left: 160px;
+    margin-top: 50px;
 }
-#bodily {
-    background: linear-gradient(84deg,rgb(125, 224, 52), rgba(125, 224, 52, 0.3));
-    width: 90%;
-    font-size: 1.25em;
-}
-/*ul > li {
-    color: #3b8796;
-}*/
-.menu-2 {
-    color: rgb(136, 28, 153);
-    font-size: 20px;
-    font-weight: 200;
-}
-.menu-item4 {
-    transform: translate(-80px,30px); 
-}
-.menu-2 {
-    transform: translate(50px,0);
-}
-.description {
+.form {
+    margin: 0 auto;
+    width: 400px;
+    padding: 1em;
+    border: 1px solid #CCC;
+    border-radius: 1em;
+  }
+  .button {
+    padding-left: 10px; 
+    margin-left: .5em;
+    align-content: center;
+  }
+/*.description {
     font-weight: 400;
     font-style: normal;
     text-align: justify;
+    padding-left: 100px;
 }
 .article {
     background: rgb(204, 0, 204);
-}
-#videoa {
+}#videoa {
     width: 400px;
     height: 220px;
     float: right;
     padding: 0 0 100px 0;
     border-radius: 20%; 
+}
+#more {
+    background: rgb(153, 51, 255);
+}*/
+.post {
+	border: 2px solid rgb(229, 158, 66);
+	margin: 10px;
+}
+
+.post-title {
+	margin-left: 5px;
+}
+
+.post-text {
+	margin-left: 5px;
+	margin-right: 5px;
 }
