--- a/style/style1.css
+++ b/style/style1.css
@@ -84,8 +84,8 @@ img {
     border-radius: 1em;
   }
   .button {
-    padding-left: 10px; 
-    margin-left: .5em;
+    padding-left: 30px; 
+    margin-left: 4em;
     align-content: center;
   }
 /*.description {
