--- a/style/style1.css
+++ b/style/style1.css
@@ -5,10 +5,12 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, 60% 40%);
     grid-template-rows: auto auto;
-   
     grid-gap: 50px;
     width: 100%;
-}
+      height: auto;
+    
+    }
+
 @media (max-width: 400px){
   #main{
     font-size: 1em;
