--- a/style/style1.css
+++ b/style/style1.css
@@ -1,135 +1,14 @@
-
-#main {
-    background: linear-gradient(84deg,rgb(125, 224, 52), rgba(125, 224, 52, 0.3));
-    font-size: 1.25em;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, 60% 40%);
-    grid-template-rows: auto auto;
-    grid-gap: 50px;
-    width: 100%;
-      height: auto;
-    
-    }
-
-@media (max-width: 400px){
-  #main{
-    font-size: 1em;
-      grid-template-areas:
-      "header header header"
-      "advert content content"
-      "footer footer footer";
-  }
+#body {
+  background-color:rgb(0, 153, 0,);
+  display: grid;
+  grid-template-columns: 70% 30%;
+  grid-template-rows: auto auto auto;
 }
-#footer {
-  grid-area: "footer";
-  
-}
-
-
-  #welcome { 
-    display: grid;
-    background: linear-gradient(84deg,rgb(0, 51, 0),rgb(125, 224, 52), rgba(125, 224, 52, 0.3));
-    width: 90%;
-    justify-content: contain;
-    height: 400px;
-    padding-right: 130px;
-}
-.menu-item {
-    font-size: 1.5em;
-    transform: translate(800px,-250px);
-    justify-content: justify;
-}
-.menu-item1 {
-    font-size: 1.1em;
-    transform: translate(80px,-5px);
-    justify-content: justify;
-}
-#header :hover{
-  color: rgba(22, 9, 56, 0.911);
-  font-size: larger;
-  }
-#header {
-    color: rgb(128, 0, 64);
-    text-align: center;
-    height: 50px;
-    padding: 0 45px 100px 10px; 
-    font-size: 1.5em;
-    font-style: italic;
-    font-family: sans-serif;
-    font-weight: bold;
-    transform: translate(90px,100px);
-    animation-name: fade;
-    animation-duration: 4s;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
-    animation-direction: alternate;
-}
-@keyframes fade {
-    20% {
-      color: rgb(128, 0, 64);
-      top: -10px;
-      left:0px;
-    }
-    50% {
-      color: rgb(255, 153, 153);
-      top: 50px;
-      left: 25px;
-      transform: rotate(-45deg);
-    }
-    100% {
-      color: rgb(172, 0, 230);
-      top: -10px;
-      left: -30px;
-      transform: rotate(45deg);
-    }
-  }
-      
 img {
-    height: 250px;
-    border: 2px solid rgb(41, 41, 2);
-    margin-left: 160px;
-    margin-top: 50px;
+  height: 15vw;
+  width: 15vw;
 }
-.img :hover {
-    height: 300px;
-    }
-.img {
-      display: flex;
-      flex-direction: row;
-      max-width: 100%;
-      height: auto;
-      justify-content: center;
-      flex-wrap: wrap; 
-    }
- 
-  
-.form {
-    margin: 0 auto;
-    width: 400px;
-    padding: 1em;
-    border: 1px solid #CCC;
-    border-radius: 1em;
-  }
-  .button {
-    padding-left: 30px; 
-    margin-left: 4em;
-    align-content: center;
-  }
-
-#footer {
-  display: flex;
-  flex-direction: row;
-}
-.post {
-	border: 2px solid rgb(229, 158, 66);
-	margin: 10px;
-}
-
-.post-title {
-	margin-left: 5px;
-}
-
-.post-text {
-	margin-left: 5px;
-	margin-right: 5px;
+h1 {
+color: lawngreen;
+font-size: 7em;
 }
