--- a/style/style1.css
+++ b/style/style1.css
@@ -1,14 +1,48 @@
-#body {
-  background-color:rgb(0, 153, 0,);
-  display: grid;
-  grid-template-columns: 70% 30%;
-  grid-template-rows: auto auto auto;
+body {
+  background: radial-gradient(rgb(204, 255, 255),rgb(153, 255, 204),rgb(77, 255, 166));
+  margin: 5px;
+  margin-top: 0px;
 }
-img {
-  height: 15vw;
-  width: 15vw;
+.header {
+  height: 100px;
+  position: relative;
+  text-align: center;
+  display: block;
+  background: url("../img/new.jpg");
+  background-position: center; 
+  background-repeat: no-repeat; 
+  background-size: cover; 
+  background-color: wheat;
+}
+.nav-div {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-right: 20px;
+  padding-top: 10px;
+}
+.nav-left {
+margin-left: 20px;
+text-transform: uppercase;
+border-bottom: 1px solid transparent;
+transition: border-bottom 300ms;
+}
+.nav-link a {
+  text-decoration: none;
+  color: rgb(115, 115, 115);
 }
 h1 {
-color: lawngreen;
-font-size: 7em;
+color: rgb(0, 68, 204);
+font-size: 4.5em;
+}
+img {
+  width: 200px;
+  height:200px;
+  border-radius: 35%;
+  border: solid;
+}
+.logo-img img{
+  height: 25px;
+  width: 25px;
+  border-radius: 25%;
 }
