--- a/style/style1.css
+++ b/style/style1.css
@@ -32,6 +32,7 @@ transition: border-bottom 300ms;
   font-family: 'Sriracha', cursive;
   font-weight: bold;
   padding-left: 5px;
+  
 }
 h1 {
 color: rgb(0, 68, 204);
@@ -58,5 +59,10 @@ img {
 .main-wrapper {
   display: grid;
   grid-template-columns: 70% 30%;
-  
+}
+.footer-bar {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
