--- a/style/style1.css
+++ b/style/style1.css
@@ -1,10 +1,17 @@
 body {
   background: radial-gradient(rgb(204, 255, 255),rgb(153, 255, 204),rgb(77, 255, 166));
-  margin: 5px;
+  margin: 10px;
+  font-family: 'Lato', sans-serif;
 }
+.container{
+  display: grid;
+  grid-template-columns: 1fr; 
+}
+
 .header {
   height: 150px;
   position: relative;
+  padding-bottom: 100px;
   text-align: center;
   display: block;
   background: url("../img/new.jpg");
@@ -15,24 +22,33 @@ body {
 }
 .nav-div {
   display: flex;
-  flex-direction: row;
+ /* flex-direction: row;*/
   justify-content: space-between;
   padding-right: 20px;
   padding-top: 10px;
 }
-.nav-left {
-margin-left: 20px;
+.nav-div > .nav-left > div {
+margin: 20px;
 text-transform: uppercase;
-border-bottom: 1px solid transparent;
-transition: border-bottom 300ms;
+font-size: 0.9em;
+}
+.nav-link {
+  border-bottom: 1px solid transparent;
+  transition: border-bottom 300ms;
+  height: 20px;
 }
 .nav-link a {
   text-decoration: none;
-  color: rgb(115, 115, 115);
+  color: rgb(154, 39, 189);
   font-family: 'Sriracha', cursive;
   font-weight: bold;
   padding-left: 5px;
-  
+ }
+ .nav-div > .nav-left > div :hover {
+   color: rgb(10, 10, 10);
+ }
+ .nav-link :hover {
+  border-bottom: 1px solid rgb(6, 35, 46);
 }
 h1 {
 color: rgb(0, 68, 204);
@@ -48,8 +64,8 @@ img {
   border: solid;
 }
 .logo-img img{
-  height: 25px;
-  width: 25px;
+  height: 35px;
+  width: 35px;
   border-radius: 25%;
 }
 .pcontent {
@@ -57,12 +73,31 @@ img {
   font-size: 1.2em;
 }
 .main-wrapper {
-  display: grid;
-  grid-template-columns: 70% 30%;
+    display: grid;
+    grid-template-columns: 65% 35%;
+    grid-template-rows: auto;
+    grid-template-areas: 
+      "main .blogspot"
+      "main .blogspot";
+    column-gap: 5px;
 }
 .footer-bar {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-evenly;
+  background: rgb(117, 116, 116);
+}
+.blogspot {
+  /*border: 2px;
+  border-color: mediumpurple;
+  border-style: solid;*/
+  border-radius: 5%;
+  text-align: justify;
+  height: 65vw;
+  width: 80%;
+  background: rgba(171, 172, 170, 0.952);
+}
+.form-content1 {
+  padding-left: 25px;
 }
