--- a/style/style1.css
+++ b/style/style1.css
@@ -96,7 +96,7 @@ img {
   text-align: justify;
   height: 65vw;
   width: 80%;
-  background: rgba(171, 172, 170, 0.952);
+  background: rgb(255, 102, 255);
 }
 .form-content1 {
   padding-left: 25px;
