--- a/style/style1.css
+++ b/style/style1.css
@@ -66,7 +66,7 @@ img {
 .logo-img img{
   height: 35px;
   width: 35px;
-  border-radius: 25%;
+  border-radius: 10px 5px 15px 5px;
 }
 .pcontent {
   font-family: 'Source Serif Pro', serif;
@@ -97,7 +97,7 @@ img {
   text-align: center;
   height: 65vw;
   width: 80%;
-  background:rgb(179, 179, 0);
+  background:rgba(179, 179, 0, 0.55);
 }
 .form-content1 {
   padding-left: 25px;
